--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./public/assets/styles.css" />
+<script src="https://unpkg.com/htmx.org@2.0.2" integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ" crossorigin="anonymous"></script>
   </head>
   <body>
-    corazon
+    <h1 hx-get="/api/last-user"></h1>
+    <h2>htmx powerhouse</h2>
   </body>
 </html>
