--- a/views/index.html
+++ b/views/index.html
@@ -10,5 +10,11 @@
   <body>
     <h1 hx-get="/api/last-user"></h1>
     <h2>htmx powerhouse</h2>
+    <form hx-post="/api/user">
+      <input type="text" name="username" value="">
+      <input type="date" name="birthday" value="">
+      <input type="password" name="password" value="">
+      <button type="submit">submit wep</button>
+    </form>
   </body>
 </html>
