--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -6,4 +6,21 @@ body {
   padding: 0;
   background-color: #28282B;
   color: #fffafa;
+  display:  flex;
+  flex-direction: column;
+}
+
+body form {
+  display:  flex;
+  flex-direction: column;
+}
+
+form input {
+  border: none;
+}
+
+form button{
+  border: none;
+  background-color: #fffafa;
+  color: #28282B;
 }
