--- a/views/index.html
+++ b/views/index.html
@@ -17,5 +17,6 @@
       <input type="password" name="password" value="" required>
       <button type="submit">submit wep</button>
     </form>
+    <a href="/api/last-user">ver el ultimo usuario que dejo el lol!!</a>
   </body>
 </html>
