--- a/views/view_user.html
+++ b/views/view_user.html
@@ -12,5 +12,6 @@
       <h1>Nombre {{ .Name }}</h1>
       <h1>Cumpleaños {{ .Birthday }}</h1>
       <h1>Contraseña hasheada {{ .Password }}</h1>
+      <h1>Telefono {{ .Cellphone }}</h1>
   </body>
 </html>
