--- a/views/index.html
+++ b/views/index.html
@@ -12,11 +12,34 @@
     <div id="content" >
     </div>
     <form hx-post="/api/user" hx-target="#content">
+      <label for="username">username:</label>
       <input type="text" name="username" value="" required>
+      <label for="birthday">cumpleaños:</label>
       <input type="date" name="birthday" value="" required>
+      <label for="cellphone">telefono:</label>
+      <input type="tel" id ="cellphone" name="cellphone" value="" required>
+      <label for="password">contraseña:</label>
       <input type="password" name="password" value="" required>
-      <button type="submit">submit wep</button>
+      <button type="submit">Dejar el lol</button>
     </form>
     <a href="/api/last-user">ver el ultimo usuario que dejo el lol!!</a>
   </body>
+  <script>
+    document.querySelector("#cellphone").addEventListener("keydown" ,(e) => {
+    if (
+          [46, 8, 9, 27, 13].indexOf(e.keyCode) !== -1 ||
+          (e.keyCode === 65 && (e.ctrlKey === true || e.metaKey === true)) ||
+          (e.keyCode >= 35 && e.keyCode <= 40)
+        ) {
+          return
+        }
+
+        if (
+          (e.shiftKey || e.keyCode < 48 || e.keyCode > 57) &&
+          (e.keyCode < 96 || e.keyCode > 105)
+        ) {
+          e.preventDefault()
+        }
+      })
+  </script>
 </html>
