--- a/views/user.html
+++ b/views/user.html
@@ -1,2 +1,2 @@
     <h1>felicidades dejaste el lol:</h1>
-    <h2>{{ .Name }}</h2>
+    <h2 style="text-align: center; font-weight: bold;">{{ .Name }}</h2>
